--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "apollo-boost": "^0.1.15",
     "vue": "^2.5.11"
   },
   "browserslist": [
@@ -18,7 +19,7 @@
     "not ie <= 8"
   ],
   "devDependencies": {
-    "apollo-client": "^1.0.1",
+    "apollo-client": "^2.4.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
@@ -27,10 +28,14 @@
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.4",
+    "graphql": "^14.0.2",
+    "graphql-tag": "^2.9.2",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.23.0",
     "vue-apollo": "^3.0.0-beta.21",
+    "vue-awesome": "^3.1.2",
+    "vue-cli-plugin-apollo": "^0.16.4",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
