--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "apollo-boost": "^0.1.15",
-    "vue": "^2.5.11"
+    "vue": "^2.5.11",
+    "vue2-leaflet": "^1.0.2"
   },
   "browserslist": [
     "> 1%",
