--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "deploy": "cross-env NODE_ENV=production webpack --progress --hide-modules && aws s3 sync dist/ s3://labs.platoniq.net/dist/"
+    "deploy": "cross-env NODE_ENV=production webpack --progress --hide-modules && aws s3 sync dist/ s3://labs.platoniq.net/dist/ && aws cloudfront create-invalidation --distribution-id=EKXZEUENMIUEV --paths /"
   },
   "dependencies": {
     "apollo-boost": "^0.1.15",
