--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "license": "GPLv3",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "deploy": "cross-env NODE_ENV=production webpack --progress --hide-modules && aws s3 sync dist/ s3://labs.platoniq.net/dist/ && aws cloudfront create-invalidation --distribution-id=EKXZEUENMIUEV --paths /"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --progress --hot --colors --no-minimize",
+    "build": "cross-env NODE_ENV=production webpack --progress",
+    "deploy": "cross-env NODE_ENV=production webpack  --progress --hide-modules && aws s3 sync dist/ s3://labs.platoniq.net/ && aws cloudfront create-invalidation --distribution-id=EKXZEUENMIUEV --paths /"
   },
   "dependencies": {
     "apollo-boost": "^0.1.15",
@@ -21,27 +21,34 @@
     "not ie <= 8"
   ],
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
     "apollo-client": "^2.4.1",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-stage-3": "^6.24.1",
+    "babel-loader": "^8.0.2",
     "bootstrap-vue": "^2.0.0-rc.11",
-    "cross-env": "^5.0.5",
-    "css-loader": "^0.28.11",
-    "file-loader": "^1.1.4",
+    "clean-webpack-plugin": "^0.1.19",
+    "cross-env": "^5.2.0",
+    "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.9.2",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.6",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.2",
+    "node-sass": "^4.9.3",
+    "node-sass-magic-importer": "^5.2.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "sass-loader": "^6.0.7",
     "style-loader": "^0.23.0",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "vue-apollo": "^3.0.0-beta.21",
     "vue-awesome": "^3.1.2",
     "vue-cli-plugin-apollo": "^0.16.4",
-    "vue-loader": "^13.0.5",
+    "vue-loader": "^15.4.1",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "webpack": "^4.18.0",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.8"
   }
 }
