--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "apollo-boost": "^0.1.15",
+    "axios": "^0.18.0",
     "vue": "^2.5.11",
+    "vue-axios": "^2.1.3",
     "vue2-leaflet": "^1.0.2"
   },
   "browserslist": [
