--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-loader": "^8.0.2",
     "bootstrap-vue": "^2.0.0-rc.11",
     "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.5.2",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
