--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@ node_modules/
 dist/
 npm-debug.log
 yarn-error.log
-config.json
+config*.json
+!config.example.json
 
 # Editor directories and files
 .idea
