--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.5.11",
     "vue-axios": "^2.1.3",
     "vue2-leaflet": "^1.0.2",
+    "vue2-leaflet-heatmap": "git+https://github.com/Platoniq/vue2-leaflet-heatmap.git",
     "vue2-leaflet-markercluster": "^2.0.0"
   },
   "browserslist": [
@@ -38,6 +39,7 @@
     "graphql": "^14.0.2",
     "graphql-tag": "^2.9.2",
     "html-webpack-plugin": "^3.2.0",
+    "leaflet.heat": "^0.2.0",
     "mini-css-extract-plugin": "^0.4.2",
     "node-sass": "^4.9.3",
     "node-sass-magic-importer": "^5.2.0",
