--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.18.0",
     "vue": "^2.5.11",
     "vue-axios": "^2.1.3",
+    "vue-multiselect": "^2.1.2",
     "vue-switches": "^2.0.1",
     "vue2-leaflet": "^1.0.2",
     "vue2-leaflet-heatmap": "git+https://github.com/Platoniq/vue2-leaflet-heatmap.git",
