--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "apollo-boost": "^0.1.15",
     "axios": "^0.18.0",
+    "axios-cache-adapter": "^2.1.1",
     "vue": "^2.5.11",
     "vue-axios": "^2.1.3",
     "vue-multiselect": "^2.1.2",
