--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "apollo-boost": "^0.1.15",
     "axios": "^0.18.0",
     "axios-cache-adapter": "^2.1.1",
+    "localforage": "^1.7.2",
+    "localforage-memoryStorageDriver": "^0.9.2",
     "vue": "^2.5.11",
     "vue-axios": "^2.1.3",
     "vue-multiselect": "^2.1.2",
