--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios-cache-adapter": "^2.1.1",
     "localforage": "^1.7.2",
     "localforage-memoryStorageDriver": "^0.9.2",
+    "papaparse": "^4.6.1",
     "vue": "^2.5.11",
     "vue-axios": "^2.1.3",
     "vue-multiselect": "^2.1.2",
