--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "axios-cache-adapter": "^2.1.1",
     "localforage": "^1.7.2",
     "localforage-memoryStorageDriver": "^0.9.2",
+    "moment": "^2.22.2",
     "papaparse": "^4.6.1",
     "vue": "^2.5.11",
     "vue-axios": "^2.1.3",
     "vue-multiselect": "^2.1.2",
+    "vue-social-sharing": "^2.3.3",
     "vue-switches": "^2.0.1",
     "vue2-leaflet": "^1.0.2",
     "vue2-leaflet-heatmap": "git+https://github.com/Platoniq/vue2-leaflet-heatmap.git",
@@ -58,6 +60,7 @@
     "vue-cli-plugin-apollo": "^0.16.4",
     "vue-loader": "^15.4.1",
     "vue-router": "^3.0.1",
+    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^4.18.0",
     "webpack-cli": "^3.1.0",
