--- a/package.json
+++ b/package.json
@@ -8,23 +8,24 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --progress --hot --colors --no-minimize",
     "build": "cross-env NODE_ENV=production webpack --progress",
-    "deploy": "cross-env NODE_ENV=production webpack  --progress --hide-modules && aws s3 sync dist/ s3://labs.platoniq.net/"
+    "deploy": "cross-env NODE_ENV=production webpack  --progress --hide-modules && gh-pages -d dist"
   },
   "dependencies": {
-    "apollo-boost": "^0.1.27",
-    "axios": "^0.18.0",
-    "axios-cache-adapter": "^2.1.1",
+    "apollo-boost": "^0.1.28",
+    "axios": "^0.18.1",
+    "axios-cache-adapter": "^2.5.0",
+    "core-js": "^2.6.10",
     "localforage": "^1.7.3",
     "localforage-memoryStorageDriver": "^0.9.2",
-    "moment": "^2.23.0",
+    "moment": "^2.24.0",
     "papaparse": "^4.6.3",
-    "vue": "^2.5.22",
-    "vue-axios": "^2.1.4",
-    "vue-multiselect": "^2.1.3",
-    "vue-social-sharing": "^2.3.3",
+    "vue": "^2.6.11",
+    "vue-axios": "^2.1.5",
+    "vue-multiselect": "^2.1.6",
+    "vue-social-sharing": "^2.4.7",
     "vue-switches": "^2.0.1",
     "vue2-leaflet": "^1.2.3",
-    "vue2-leaflet-heatmap": "git+https://github.com/Platoniq/vue2-leaflet-heatmap.git",
+    "vue2-leaflet-heatmap": "^1.0.5",
     "vue2-leaflet-markercluster": "^2.1.2"
   },
   "browserslist": [
@@ -33,37 +34,38 @@
     "not ie <= 8"
   ],
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/preset-env": "^7.2.3",
-    "apollo-client": "^2.4.12",
-    "babel-loader": "^8.0.5",
-    "bootstrap-vue": "^2.0.0-rc.11",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.9.0",
+    "apollo-client": "^2.6.8",
+    "babel-loader": "^8.1.0",
+    "bootstrap-vue": "^2.9.0",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.6.0",
-    "cross-env": "^5.2.0",
+    "cross-env": "^5.2.1",
     "css-loader": "^1.0.1",
     "file-loader": "^2.0.0",
-    "graphql": "^14.1.1",
-    "graphql-tag": "^2.10.1",
+    "gh-pages": "^2.2.0",
+    "graphql": "^14.6.0",
+    "graphql-tag": "^2.10.3",
     "html-webpack-plugin": "^3.2.0",
     "leaflet.heat": "^0.2.0",
     "mini-css-extract-plugin": "^0.4.5",
-    "node-sass": "^4.11.0",
-    "node-sass-magic-importer": "^5.3.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "node-sass": "^4.13.1",
+    "node-sass-magic-importer": "^5.3.2",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^1.3.0",
-    "vue-apollo": "^3.0.0-beta.27",
-    "vue-awesome": "^3.3.1",
+    "vue-apollo": "^3.0.3",
+    "vue-awesome": "^3.5.4",
     "vue-cli-plugin-apollo": "^0.16.6",
-    "vue-loader": "^15.5.1",
-    "vue-router": "^3.0.2",
+    "vue-loader": "^15.9.1",
+    "vue-router": "^3.1.6",
     "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.5.22",
-    "webpack": "^4.29.0",
-    "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14"
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
